# rsight

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-search-core/: 01-CONTEXT.md  01-PLAN.md  01-search-core-01-SUMMARY.md  01-search-core-02-SUMMARY.md  01-search-core-03-SUMMARY.md  01-search-core-04-SUMMARY.md  01-search-core-05-SUMMARY.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md
.planning/phases/02-tui-shell/: 02-CONTEXT.md  02-tui-shell-01-PLAN.md  02-tui-shell-01-SUMMARY.md  02-tui-shell-02-PLAN.md  02-tui-shell-02-SUMMARY.md  02-tui-shell-03-PLAN.md  02-tui-shell-03-SUMMARY.md  02-tui-shell-04-PLAN.md  02-tui-shell-04-SUMMARY.md  02-tui-shell-05-PLAN.md  02-tui-shell-05-SUMMARY.md
.planning/phases/03-ai-conversations-open-actions/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-CONTEXT.md
Formula/: rsight.rb
benches/: search_bench.rs
landing/: wrangler.toml
landing/public/: manifest.json
landing/src/: global.css
landing/src/components/landing-page/: landing-page.tsx
landing/src/components/router-head/: router-head.tsx
landing/src/routes/: index.tsx
src/: actions.rs  app.rs  content_search.rs  event_loop.rs  lib.rs  main.rs  name_search.rs  search.rs  types.rs
src/ai_search/: claude.rs  codex.rs  cursor.rs  mod.rs
src/ui/: highlight.rs  layout.rs  mod.rs  render.rs
