[package]
name = "rsight"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"          # parallel directory traversal (battle-tested, used by ripgrep)
tokio = { version = "1", features = ["full"] }  # async runtime for debounced search cancellation
rayon = "1"             # data-parallel iterators for content search
fuzzy-matcher = "0.3"   # fuzzy name matching (SkimMatcherV2 algorithm)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde_json = "1"        # JSON parsing for Claude Code JSONL conversations
# rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for Cursor conversation DBs (not yet supported)

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
